--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.feetmonitor"
+        applicationId "com.dashkudov.feetmonitor"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
