--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -47,5 +48,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // Chart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    // Dagger
+    implementation 'com.google.dagger:dagger:2.32'
+    implementation "com.google.dagger:dagger-android:2.32"
+    implementation 'com.google.dagger:dagger-android-support:2.25.2'
+    kapt 'com.google.dagger:dagger-android-processor:2.32'
+    kapt 'com.google.dagger:dagger-compiler:2.32'
 }
