--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     implementation 'com.google.dagger:dagger-android-support:2.25.2'
     kapt 'com.google.dagger:dagger-android-processor:2.32'
     kapt 'com.google.dagger:dagger-compiler:2.32'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.3.0'
 }
