--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ allprojects {
     repositories {
         maven { url 'https://jitpack.io' }
         google()
+        mavenCentral()
         jcenter()
     }
 }
