--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
 
     implementation 'com.github.zcweng:switch-button:0.0.3@aar'
 
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
