--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.32'
     kapt 'com.google.dagger:dagger-compiler:2.32'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+
     // Material Design
     implementation 'com.google.android.material:material:1.3.0'
 
